MH-1889 - Added more options to demo data loader: loading n samples only and choosing random samples.
git-svn-id: https://opencast.jira.com/svn/MH/trunk@4358 e6edf6fb-f266-4316-afb4-e53d95876a76